--- a/main.css
+++ b/main.css
@@ -17,4 +17,21 @@ body {
   font-weight: 300;
   font-size: 15px;
 }
-  
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+  nav ul li {
+    display: inline-block;
+    list-style-type: none;
+  }
+
+  nav > ul > li > a {
+      color: #aaa;
+      display: block;
+      line-height: 56px;
+      padding: 0 24px;
+      text-decoration: none;
+    }
