--- a/main.css
+++ b/main.css
@@ -1,37 +1,18 @@
-nav {
-  background-color: #fff;
-  border: 1px solid #dedede;
-  border-radius: 4px;
-  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
-  color: #888;
+.dropdown {
+  position: relative;
+}
+
+.drop-nav {
+  position: absolute;
+  display: none;
+}
+.dropdown li {
+  border-bottom: 1px solid rgba(255, 255, 255, .2);
+}
+
+.dropdown:hover > .drop-nav {
   display: block;
-  margin: 8px 22px 8px 22px;
-  overflow: hidden;
-  width: 90%; 
 }
-
-body {
-  background-color: #EBE8E4;
-  color: #222;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: 300;
-  font-size: 15px;
+a:hover {
+ color: blue;
 }
-
-nav ul {
-  margin: 0;
-  padding: 0;
-}
-
-  nav ul li {
-    display: inline-block;
-    list-style-type: none;
-  }
-
-  nav > ul > li > a {
-      color: #aaa;
-      display: block;
-      line-height: 56px;
-      padding: 0 24px;
-      text-decoration: none;
-    }
