--- a/main.css
+++ b/main.css
@@ -1,3 +1,58 @@
+/*---- Basic Styling --- */
+body {
+  margin: 0;
+  background: #ecf0f1;
+  color: #fff;
+  font-family: sans-serif;
+  line-height: 1.5;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0; 
+}
+
+header {
+  margin: auto;
+  min-height: 50px;
+  padding: 1em 2em;
+  border: 2px solid #2675a9;
+  border-top: none;
+  border-radius: 0 0 5px 5px;
+  background: GREY;
+}
+
+a {
+  color: #fff;
+  display: block;
+  padding: 10px 30px;
+  text-decoration: none;
+}
+
+nav ul li {
+  display: inline-block;
+  list-style-type: none;
+}
+div .navbox {
+  display: inline-block;
+}
+
+.logo {
+  display: inline-block;
+  float: left;
+}
+.leftnav {
+  display: inline-block;
+  float: left;
+}
+
+.rightnav {
+  display: inline-block;
+  float: right;
+}
+/*------ Nav Dropdown ------------ */
+
 .dropdown {
   position: relative;
 }
@@ -16,3 +71,5 @@
 a:hover {
  color: blue;
 }
+
+nav ul li a:focus,
